tests/lean/commandPrefix.lean.expected.out
let_fun this := ();
this : Unit
commandPrefix.lean:3:0: error: expected command
